minor updates to all files

--- a/templates/ARCHIVE/website-omnifood.html
+++ b/templates/ARCHIVE/website-omnifood.html
@@ -79,13 +79,13 @@
             <div class="text-center">
               <h1 class="h2">003 : Website &mdash; Omnifood.com</h1>
             </div>
-            <p>ADD TEXT HERE...</p>
+            <p>A website built for a fictional company called Omnifood, a premium food delivery service.</p>
 
-            <blockquote>
+            <!-- <blockquote>
               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
               </p>
               <small class="pull-right">Irina Martin</small>
-            </blockquote>
+            </blockquote> -->
           </div>
         </div>
 
