--- a/templates/about.html
+++ b/templates/about.html
@@ -27,7 +27,6 @@
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 
   <title>About</title>
-
 </head>
 
 <body class="">
@@ -53,7 +52,7 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
+            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
           </ul>
         </div>
       </div>
@@ -71,16 +70,40 @@
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
+
                 <div class="col-xs-12 col-md-6">
                   <h3>Summary</h3>
                   <p>Versatile, naturally curious engineer with three years of professional experience. Graduate of the
                     University of Kansas with a degree in Chemical Engineering. Adept at quickly picking up new skills,
-                    meeting tight deadlines, and producing exceptional results with an attention to detail.
-                  </p>
+                    meeting tight deadlines, and producing exceptional results with an attention to detail.</p>
+
                   <h3>Education</h3>
-                  <p>Programming Languages &mdash; Python, JavaScript, HTML, CSS, PHP<br>
-                    University of Kansas &mdash; Chemical Engineering, B.S.
-                  </p>
+                  <ul>
+                    <li>Programming Languages:</li>
+                    <div class="row">
+                      <div class="col-xs-6">
+                        <ul>
+                          <li>Python</li>
+                          <li>JavaScript</li>
+                          <li>PostgreSQL</li>
+                        </ul>
+                      </div>
+                      <div class="col-xs-6">
+                        <ul>
+                          <li>HTML</li>
+                          <li>CSS</li>
+                          <li>PHP</li>
+                        </ul>
+                      </div>
+                    </div>
+                    <br>
+                    <li>University Of Kansas
+                      <ul>
+                        <li>Chemical Engineering, B.S.</li>
+                      </ul>
+                    </li>
+                  </ul>
+
                   <h3>Interests &amp; Hobbies</h3>
                   <ul>
                     <li>Staying active by playing golf, hiking, skiing, and adventuring backcountry</li>
@@ -90,10 +113,12 @@
                       house</li>
                   </ul>
                 </div>
+
                 <div class="col-xs-12 col-md-6">
-                  <img src="./static/assets/images/profile-aps-03.png" class="img-responsive img-rounded img-centered"
+                  <img src="./static/assets/images/profile-aps-05.jpg" class="img-responsive img-rounded img-centered"
                     alt="Austin Scobee">
                 </div>
+
               </div>
             </div>
           </div>
