--- a/templates/contact.html
+++ b/templates/contact.html
@@ -24,10 +24,9 @@
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
   <link href="./static/favicon.ico" rel="icon">
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 
   <title>Contact</title>
-
-  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
 
 <body class="">
@@ -53,7 +52,7 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
+            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
           </ul>
         </div>
       </div>
@@ -160,6 +159,7 @@
   </script>
 
   <script type="text/javascript" src="./static/main.70a66962.js"></script>
+
 </body>
 
 </html>
