--- a/templates/passwordchecker.html
+++ b/templates/passwordchecker.html
@@ -24,10 +24,9 @@
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
   <link href="./static/favicon.ico" rel="icon">
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 
   <title>001 : Password Checker</title>
-
-  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
 
 <body class="">
@@ -53,22 +52,23 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
+            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
           </ul>
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./passwordchecker.html" title="" class="active">001</a></li>
-            <li><a href="./topstories.html" title="" class="active">002</a></li>
-            <li><a href="./website-omnifood.html" title="" class="active">003</a></li>
-            <li><a href="./comingsoon.html" title="">004</a></li>
-            <li><a href="./comingsoon.html" title="">005</a></li>
-            <li><a href="./comingsoon.html" title="">006</a></li>
+            <li><a href="./passwordchecker.html" title="Password Checker" class="active">001</a></li>
+            <li><a href="./topstories.html" title="Hacker News: Top Stories" class="active">002</a></li>
+            <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
+            <!-- <li><a href="./comingsoon.html" title="">004</a></li> -->
+            <!-- <li><a href="./comingsoon.html" title="">005</a></li> -->
+            <!-- <li><a href="./comingsoon.html" title="">006</a></li> -->
           </ul>
         </div>
       </div>
     </nav>
   </header>
+
   <div class="section-container">
     <div class="container">
       <div class="row">
@@ -78,18 +78,16 @@
             <div class="text-center">
               <h1 class="h2">001 : Password Checker</h1>
             </div>
-            <p>Securely check to see if your passwords have been exposed in a data breach via the terminal.</p>
-
-            <blockquote>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-              <small class="pull-right">Irina Martin</small>
-            </blockquote>
+            <p>Working in Python, I was able to create a password checker that has become a useful tool for myself and
+              could be to others when trying to avoid being a target in a data breach. This uses the haveibeenpwned.com
+              API to see how many times a particular password has been leaked. Although this is a simple script, it
+              could be useful for any user.
+            </p>
+            <a href="https://github.com/ascobee/portfolio" target="_blank" title="GitHub" class="">Download</a>
           </div>
         </div>
 
-
-
-        <div class="col-md-8 col-md-offset-2 section-container-spacer">
+        <!--         <div class="col-md-8 col-md-offset-2 section-container-spacer">
           <div class="row">
             <div class="col-xs-12 col-md-6">
               <a href="./static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
@@ -100,20 +98,47 @@
               <p>Password Checker Script</p>
             </div>
             <div class="col-xs-12 col-md-6">
-              <img src="./static/assets/images/work001-03.jpg" class="img-responsive img-rounded" alt="">
-              <p>Memphis skyline</p>
+              <figure class="">
+                <a href="./static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
+                  class="">
+                  <img src="./static/assets/images/passwordcheckerterminal.png"
+                    class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
+                </a>
+              </figure>
+              <p>Password Checker Terminal</p>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-xs-12">
+          <figure class="text-center">
+            <a href="./static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="./static/assets/images/passwordcheckerterminal.png"
+                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
+            </a>
+            <p>Password Checker Terminal</p>
+          </figure>
+        </div>
+        <div class="col-xs-12">
+          <figure class="text-center">
+            <a href="./static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="./static/assets/images/passwordcheckerscript.png"
+                class="img-responsive img-rounded img-centered" alt="Password Checker Script">
+            </a>
+            <p>Password Checker Script</p>
+          </figure>
+        </div>
+
+        <!-- <div class="col-xs-12">
           <figure class="">
             <a href="https://github.com/ascobee/portfolio" target="_blank" title="Download" class="">
               <img src="./static/assets/images/passwordcheckerterminal.png"
                 class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
             </a>
           </figure>
-        </div>
+        </div> -->
 
       </div>
     </div>
@@ -143,6 +168,7 @@
   </script>
 
   <script type="text/javascript" src="./static/main.70a66962.js"></script>
+
 </body>
 
 </html>
