--- a/templates/topstories.html
+++ b/templates/topstories.html
@@ -24,10 +24,9 @@
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
   <link href="./static/favicon.ico" rel="icon">
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 
   <title>002 : Web Scraping</title>
-
-  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
 
 <body class="">
@@ -53,23 +52,24 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
+            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
           </ul>
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./passwordchecker.html" title="" class="active">001</a></li>
-            <li><a href="./topstories.html" title="" class="active">002</a></li>
-            <li><a href="./website-omnifood.html" title="" class="active">003</a></li>
-            <li><a href="./comingsoon.html" title="">004</a></li>
-            <li><a href="./comingsoon.html" title="">005</a></li>
-            <li><a href="./comingsoon.html" title="">006</a></li>
+            <li><a href="./passwordchecker.html" title="Password Checker" class="active">001</a></li>
+            <li><a href="./topstories.html" title="Hacker News: Top Stories" class="active">002</a></li>
+            <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
+            <!-- <li><a href="./comingsoon.html" title="">004</a></li> -->
+            <!-- <li><a href="./comingsoon.html" title="">005</a></li> -->
+            <!-- <li><a href="./comingsoon.html" title="">006</a></li> -->
           </ul>
 
         </div>
       </div>
     </nav>
   </header>
+
   <div class="section-container">
     <div class="container">
       <div class="row">
@@ -79,19 +79,19 @@
             <div class="text-center">
               <h1 class="h2">002 : Top Stories</h1>
             </div>
-            <p>Get a list of the top stories (>200 points) from the first two pages on Hacker News.</p>
+            <p>Interested in the top news stories? This Python script scrapes the first two pages of Hacker News for the
+              most upvoted articles. In my daily life, this shortcut minimizes wasted time and allows me to jump start
+              my day!</p>
 
-            <blockquote>
+            <!-- <blockquote>
               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
               </p>
               <small class="pull-right">Irina Martin</small>
-            </blockquote>
+            </blockquote> -->
           </div>
         </div>
 
-
-
-        <div class="col-md-8 col-md-offset-2 section-container-spacer">
+        <!--         <div class="col-md-8 col-md-offset-2 section-container-spacer">
           <div class="row">
             <div class="col-xs-12 col-md-6">
               <a href="./static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge" class="">
@@ -105,16 +105,37 @@
               <p>Memphis skyline</p>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-xs-12">
+          <figure class="text-center">
+            <a href="./static/assets/images/topstoriesterminal.png" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="./static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
+                alt="Top Stories Terminal">
+            </a>
+            <p>Top Stories Terminal</p>
+          </figure>
+        </div>
+        <div class="col-xs-12">
+          <figure class="text-center">
+            <a href="./static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="./static/assets/images/topstoriesscript.png" class="img-responsive img-rounded img-centered"
+                alt="Top Stories Script">
+            </a>
+            <p>Top Stories Script</p>
+          </figure>
+        </div>
+
+        <!--         <div class="col-xs-12">
           <figure class="">
             <a href="https://github.com/ascobee/portfolio" target="_blank" title="Download" class="">
               <img src="./static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
                 alt="Top Stories Terminal">
             </a>
           </figure>
-        </div>
+        </div> -->
 
       </div>
     </div>
