--- a/templates/ARCHIVE/works-OLD.html
+++ b/templates/ARCHIVE/works-OLD.html
@@ -52,7 +52,7 @@
             <li><a href="./works.html" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
+            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
           </ul>
         </div>
       </div>
@@ -66,63 +66,113 @@
         <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
           <div class="text-center">
             <h1 class="h2">02 : Works</h1>
-            <p>Here are a few of my favorite projects. I am currently working in Python and PostgreSQL. More
-              projects coming soon!</p>
+            <p>Here are a few of my favorite projects. I am currently working in Python and PostgreSQL. More projects
+              coming soon!</p>
           </div>
         </div>
 
         <div class="col-md-12">
 
           <div id="myCarousel" class="carousel slide projects-carousel">
+            <!-- Carousel items -->
             <div class="carousel-inner">
               <div class="item active">
                 <div class="row">
-
                   <div class="col-sm-4">
+
                     <a href="./passwordchecker.html" title="" class="black-image-project-hover">
                       <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>001/003</h4>
+                      <h4>001/006</h4>
                       <h3>Password Checker</h3>
-                      <p>Securely check to see if your passwords have been exposed in a data
-                        breach via the terminal.</p>
+                      <p>Securely check to see if your passwords have been exposed in a data breach via the terminal.
+                      </p>
                       <a href="./passwordchecker.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
-
                   <div class="col-sm-4">
                     <a href="./topstories.html" title="" class="black-image-project-hover">
                       <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>002/003</h4>
+                      <h4>002/006</h4>
                       <h3>Hacker News: Top Stories</h3>
-                      <p>Get a list of the top stories (>200 points) from the first two pages on
-                        Hacker News.</p>
+                      <p>Get a list of the top stories (>200 points) from the first two pages on Hacker News.</p>
                       <a href="./topstories.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
-
                   <div class="col-sm-4">
-                    <a href="./omnifood/" target="_blank" title="" class="black-image-project-hover">
+                    <a href="./website-omnifood.html" title="" class="black-image-project-hover">
                       <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>003/003</h4>
+                      <h4>003/006</h4>
                       <h3>Website: Omnifood</h3>
-                      <p>A website built for a fictional company called Omnifood, a premium food
-                        delivery service.</p>
-                      <a href="./omnifood/" target="_blank" title="" class="btn btn-default">Check it out!</a>
+                      <p>A website built for a fictional company called Omnifood, a premium food delivery service.</p>
+                      <a href="./omnifood/" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
                 </div>
+                <!--/row-->
               </div>
+              <!--/item-->
+              <div class="item">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <a href="./comingsoon.html" class="black-image-project-hover">
+                      <img src="./static/assets/images/work02-hover.jpg" alt="Image" class="img-responsive img-rounded">
+                    </a>
+                    <div class="card-container">
+                      <h4>004/006</h4>
+                      <h3>Coming Soon!</h3>
+                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
+                      <a href="./comingsoon.html" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <a href="./comingsoon.html" class="black-image-project-hover">
+                      <img src="./static/assets/images/work01-hover.jpg" alt="Image" class="img-responsive img-rounded">
+                    </a>
+                    <div class="card-container">
+                      <h4>005/006</h4>
+                      <h3>Coming Soon!</h3>
+                      <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies.</p>
+                      <a href="./comingsoon.html" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <a href="./comingsoon.html" class="black-image-project-hover">
+                      <img src="./static/assets/images/work03-hover.jpg" alt="Image" class="img-responsive img-rounded">
+                    </a>
+                    <div class="card-container">
+                      <h4>006/006</h4>
+                      <h3>Coming Soon!</h3>
+                      <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
+                      <a href="./comingsoon.html" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
+
+                </div>
+                <!--/row-->
+              </div>
+
+              <!--/item-->
             </div>
+            <!--/carousel-inner-->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
+
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
           </div>
 
+
+
+          <!--/myCarousel-->
         </div>
+
+
 
       </div>
     </div>
@@ -151,7 +201,6 @@
     });
   </script>
   <script type="text/javascript" src="./static/main.70a66962.js"></script>
-
 </body>
 
 </html>
