--- a/templates/topstories.html
+++ b/templates/topstories.html
@@ -81,7 +81,10 @@
             </div>
             <p>Interested in the top news stories? This Python script scrapes the first two pages of Hacker News for the
               most upvoted articles. In my daily life, this shortcut minimizes wasted time and allows me to jump start
-              my day!</p>
+              my day!
+            </p>
+            <a href="https://github.com/ascobee/portfolio" target="_blank" title="GitHub"
+              class="btn-download">Download</a>
 
             <!-- <blockquote>
               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
