--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
     </header>
     <!-- Add your site or app content here -->
     <div class="hero-full-container background-image-container white-text-container"
-        style="background-image: url('./static/assets/images/space.jpg')">
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('./static/assets/images/space.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
