--- a/templates/passwordchecker.html
+++ b/templates/passwordchecker.html
@@ -83,7 +83,7 @@
               API to see how many times a particular password has been leaked. Although this is a simple script, it
               could be useful for any user.
             </p>
-            <a href="https://github.com/ascobee/portfolio" target="_blank" title="GitHub"
+            <a href="https://github.com/ascobee/portfolioprojects" target="_blank" title="GitHub"
               class="btn-download">Download</a>
           </div>
         </div>
