--- a/templates/topstories.html
+++ b/templates/topstories.html
@@ -83,7 +83,7 @@
               most upvoted articles. In my daily life, this shortcut minimizes wasted time and allows me to jump start
               my day!
             </p>
-            <a href="https://github.com/ascobee/portfolio" target="_blank" title="GitHub"
+            <a href="https://github.com/ascobee/portfolioprojects" target="_blank" title="GitHub"
               class="btn-download">Download</a>
 
             <!-- <blockquote>
