--- a/templates/passwordchecker.html
+++ b/templates/passwordchecker.html
@@ -60,7 +60,7 @@
             <li><a href="./passwordchecker.html" title="Password Checker" class="active">001</a></li>
             <li><a href="./topstories.html" title="Hacker News: Top Stories" class="active">002</a></li>
             <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
-            <!-- <li><a href="./comingsoon.html" title="">004</a></li> -->
+            <li><a href="./calculator.html" title="GUI Calculator" class="active">004</a></li>
             <!-- <li><a href="./comingsoon.html" title="">005</a></li> -->
             <!-- <li><a href="./comingsoon.html" title="">006</a></li> -->
           </ul>
@@ -84,7 +84,7 @@
               could be useful for any user.
             </p>
             <a href="https://github.com/ascobee/portfolioprojects" target="_blank" title="GitHub"
-              class="btn-download">Download</a>
+              class="btn-download">View/Download</a>
           </div>
         </div>
 
