--- a/templates/works.html
+++ b/templates/works.html
@@ -36,7 +36,7 @@
   <div id="site-border-bottom"></div>
   <!-- Add your content of header -->
   <header>
-    <nav class="navbar  navbar-fixed-top navbar-default">
+    <nav class="navbar navbar-fixed-top navbar-default">
       <div class="container">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
           aria-expanded="false">
@@ -83,7 +83,7 @@
                       <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>001/003</h4>
+                      <h4>001/004</h4>
                       <h3>Password Checker</h3>
                       <p>Securely check to see if your passwords have been exposed in a data
                         breach via the terminal.</p>
@@ -96,7 +96,7 @@
                       <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>002/003</h4>
+                      <h4>002/004</h4>
                       <h3>Hacker News: Top Stories</h3>
                       <p>Get a list of the top stories (>200 points) from the first two pages on
                         Hacker News.</p>
@@ -109,11 +109,24 @@
                       <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>003/003</h4>
+                      <h4>003/004</h4>
                       <h3>Website: Omnifood</h3>
                       <p>A website built for a fictional company called Omnifood, a premium food
                         delivery service.</p>
                       <a href="./omnifood/" target="_blank" title="" class="btn btn-default">Check it out!</a>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <a href="./calculator.html" title="" class="black-image-project-hover">
+                      <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>004/004</h4>
+                      <h3>GUI Calculator</h3>
+                      <p>This graphical user interface calculator can perform addition, subtraction, multiplication,
+                        division, and more.</p>
+                      <a href="./calculator.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
