--- a/templates/contact.html
+++ b/templates/contact.html
@@ -48,8 +48,8 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav ">
-            <li><a href="./index.html" title="">01 : Home</a></li>
-            <li><a href="./works.html" title="">02 : Works</a></li>
+            <li><a href="./" title="">01 : Home</a></li>
+            <li><a href="./works/" title="">02 : Works</a></li>
             <li><a href="./about.html" title="">03 : About</a></li>
             <li><a href="./contact.html" title="">04 : Contact</a></li>
             <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
@@ -69,7 +69,9 @@
 
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-              <form action="" method="POST" class="reveal-content">
+              <form method="POST" action="https://www1.domain.com/scripts/formemail.html" class="reveal-content">
+                <input type="hidden" name="my_email" value="austin.scobee@gmail.com">
+                <input type="hidden" name="subject" value="Portfolio Contact Form">
                 <div class="row">
                   <div class="col-md-7">
                     <div class="form-group">
