--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav ">
                         <li><a href="./index.html" title="">01 : Home</a></li>
-                        <li><a href="./works.html" title="">02 : Works</a></li>
+                        <li><a href="./works/" title="">02 : Works</a></li>
                         <li><a href="./about.html" title="">03 : About</a></li>
                         <li><a href="./contact.html" title="">04 : Contact</a></li>
                         <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 :
