--- a/templates/works/calculator.html
+++ b/templates/works/calculator.html
@@ -23,10 +23,10 @@
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
-  <link href="./static/favicon.ico" rel="icon">
-  <link href="./static/main.3f6952e4.css" rel="stylesheet">
+  <link href="../static/favicon.ico" rel="icon">
+  <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>001 : Password Checker</title>
+  <title>004 : GUI Calculator</title>
 </head>
 
 <body class="">
@@ -48,11 +48,11 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav ">
-            <li><a href="./index.html" title="">01 : Home</a></li>
-            <li><a href="./works.html" title="">02 : Works</a></li>
-            <li><a href="./about.html" title="">03 : About</a></li>
-            <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
+            <li><a href="../" title="">01 : Home</a></li>
+            <li><a href="./" title="">02 : Works</a></li>
+            <li><a href="../about.html" title="">03 : About</a></li>
+            <li><a href="../contact.html" title="">04 : Contact</a></li>
+            <li><a href="../Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
           </ul>
 
 
@@ -64,6 +64,7 @@
             <!-- <li><a href="./comingsoon.html" title="">005</a></li> -->
             <!-- <li><a href="./comingsoon.html" title="">006</a></li> -->
           </ul>
+
         </div>
       </div>
     </nav>
@@ -73,70 +74,68 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
+          <img src="../static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">001 : Password Checker</h1>
+              <h1 class="h2">004 : GUI Calculator</h1>
             </div>
-            <p>Working in Python, I was able to create a password checker that has become a useful tool for myself and
-              could be to others when trying to avoid being a target in a data breach. This uses the haveibeenpwned.com
-              API to see how many times a particular password has been leaked. Although this is a simple script, it
-              could be useful for any user.
+            <p>Interested in the top news stories? This Python script scrapes the first two pages of Hacker News for the
+              most upvoted articles. In my daily life, this shortcut minimizes wasted time and allows me to jump start
+              my day!
             </p>
             <a href="https://github.com/ascobee/portfolioprojects" target="_blank" title="GitHub"
               class="btn-download">View/Download</a>
+
+            <!-- <blockquote>
+              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
+              </p>
+              <small class="pull-right">Irina Martin</small>
+            </blockquote> -->
           </div>
         </div>
 
         <!--         <div class="col-md-8 col-md-offset-2 section-container-spacer">
           <div class="row">
             <div class="col-xs-12 col-md-6">
-              <a href="./static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
-                class="">
-                <img src="./static/assets/images/passwordcheckerscript.png" class="img-responsive img-rounded"
-                  alt="Password Checker Script">
+              <a href="./static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge" class="">
+                <img src="./static/assets/images/topstoriesscript.png" class="img-responsive img-rounded"
+                  alt="Top Stories Script">
               </a>
-              <p>Password Checker Script</p>
+              <p>Top Stories Script</p>
             </div>
             <div class="col-xs-12 col-md-6">
-              <figure class="">
-                <a href="./static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
-                  class="">
-                  <img src="./static/assets/images/passwordcheckerterminal.png"
-                    class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
-                </a>
-              </figure>
-              <p>Password Checker Terminal</p>
+              <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
+              <p>Memphis skyline</p>
             </div>
           </div>
         </div> -->
 
         <div class="col-xs-12">
           <figure class="text-center">
-            <a href="./static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
+            <a href="../static/assets/images/topstoriesterminal.png" target="_blank" title="Click to enlarge"
               class="img-btn">
-              <img src="./static/assets/images/passwordcheckerterminal.png"
-                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
+              <img src="../static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
+                alt="Top Stories Terminal">
             </a>
-            <p>Password Checker Terminal</p>
+            <p>Calculator Interface</p>
           </figure>
         </div>
         <div class="col-xs-12">
           <figure class="text-center">
-            <a href="./static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
+            <a href="../static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge"
               class="img-btn">
-              <img src="./static/assets/images/passwordcheckerscript.png"
-                class="img-responsive img-rounded img-centered" alt="Password Checker Script">
+              <img src="../static/assets/images/topstoriesscript.png" class="img-responsive img-rounded img-centered"
+                alt="Top Stories Script">
             </a>
-            <p>Password Checker Script</p>
+            <p>Calculator Script</p>
           </figure>
         </div>
 
-        <!-- <div class="col-xs-12">
+        <!--         <div class="col-xs-12">
           <figure class="">
             <a href="https://github.com/ascobee/portfolio" target="_blank" title="Download" class="">
-              <img src="./static/assets/images/passwordcheckerterminal.png"
-                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
+              <img src="./static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
+                alt="Top Stories Terminal">
             </a>
           </figure>
         </div> -->
@@ -168,8 +167,7 @@
     });
   </script>
 
-  <script type="text/javascript" src="./static/main.70a66962.js"></script>
-
+  <script type="text/javascript" src="../static/main.70a66962.js"></script>
 </body>
 
 </html>
