--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -23,8 +23,8 @@
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
-  <link href="./static/favicon.ico" rel="icon">
-  <link href="./static/main.3f6952e4.css" rel="stylesheet">
+  <link href="../static/favicon.ico" rel="icon">
+  <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
   <title>Works</title>
 </head>
@@ -48,11 +48,11 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav ">
-            <li><a href="./index.html" title="">01 : Home</a></li>
-            <li><a href="./works.html" title="">02 : Works</a></li>
-            <li><a href="./about.html" title="">03 : About</a></li>
-            <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
+            <li><a href="../" title="">01 : Home</a></li>
+            <li><a href="./" title="">02 : Works</a></li>
+            <li><a href="../about.html" title="">03 : About</a></li>
+            <li><a href="../contact.html" title="">04 : Contact</a></li>
+            <li><a href="../Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
           </ul>
         </div>
       </div>
@@ -80,53 +80,58 @@
 
                   <div class="col-sm-4">
                     <a href="./passwordchecker.html" title="" class="black-image-project-hover">
-                      <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
+                      <img src="../static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>001/004</h4>
                       <h3>Password Checker</h3>
                       <p>Securely check to see if your passwords have been exposed in a data
                         breach via the terminal.</p>
-                      <a href="./passwordchecker.html" title="" class="btn btn-default">Check it out!</a>
+                      <a href="./passwordchecker.html" title="" class="btn btn-default">Check it
+                        out!</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
                     <a href="./topstories.html" title="" class="black-image-project-hover">
-                      <img src="./static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
+                      <img src="../static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>002/004</h4>
                       <h3>Hacker News: Top Stories</h3>
                       <p>Get a list of the top stories (>200 points) from the first two pages on
                         Hacker News.</p>
-                      <a href="./topstories.html" title="" class="btn btn-default">Check it out!</a>
+                      <a href="./topstories.html" title="" class="btn btn-default">Check it
+                        out!</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
                     <a href="./omnifood/" target="_blank" title="" class="black-image-project-hover">
-                      <img src="./static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
+                      <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>003/004</h4>
                       <h3>Website: Omnifood</h3>
                       <p>A website built for a fictional company called Omnifood, a premium food
                         delivery service.</p>
-                      <a href="./omnifood/" target="_blank" title="" class="btn btn-default">Check it out!</a>
+                      <a href="./omnifood/" target="_blank" title="" class="btn btn-default">Check
+                        it out!</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
                     <a href="./calculator.html" title="" class="black-image-project-hover">
-                      <img src="./static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
+                      <img src="../static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>004/004</h4>
                       <h3>GUI Calculator</h3>
-                      <p>This graphical user interface calculator can perform addition, subtraction, multiplication,
+                      <p>This graphical user interface calculator can perform addition,
+                        subtraction, multiplication,
                         division, and more.</p>
-                      <a href="./calculator.html" title="" class="btn btn-default">Check it out!</a>
+                      <a href="./calculator.html" title="" class="btn btn-default">Check it
+                        out!</a>
                     </div>
                   </div>
 
@@ -163,7 +168,7 @@
       navActivePage();
     });
   </script>
-  <script type="text/javascript" src="./static/main.70a66962.js"></script>
+  <script type="text/javascript" src="../static/main.70a66962.js"></script>
 
 </body>
 
