--- a/templates/works/topstories.html
+++ b/templates/works/topstories.html
@@ -23,10 +23,10 @@
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
-  <link href="./static/favicon.ico" rel="icon">
-  <link href="./static/main.3f6952e4.css" rel="stylesheet">
+  <link href="../static/favicon.ico" rel="icon">
+  <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>004 : GUI Calculator</title>
+  <title>002 : Web Scraping</title>
 </head>
 
 <body class="">
@@ -48,11 +48,11 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav ">
-            <li><a href="./index.html" title="">01 : Home</a></li>
-            <li><a href="./works.html" title="">02 : Works</a></li>
-            <li><a href="./about.html" title="">03 : About</a></li>
-            <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
+            <li><a href="../" title="">01 : Home</a></li>
+            <li><a href="./" title="">02 : Works</a></li>
+            <li><a href="../about.html" title="">03 : About</a></li>
+            <li><a href="../contact.html" title="">04 : Contact</a></li>
+            <li><a href="../Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
           </ul>
 
 
@@ -74,10 +74,10 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <img src="./static/assets/images/work001-01.jpg" class="img-responsive" alt="">
+          <img src="../static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">004 : GUI Calculator</h1>
+              <h1 class="h2">002 : Top Stories</h1>
             </div>
             <p>Interested in the top news stories? This Python script scrapes the first two pages of Hacker News for the
               most upvoted articles. In my daily life, this shortcut minimizes wasted time and allows me to jump start
@@ -112,22 +112,22 @@
 
         <div class="col-xs-12">
           <figure class="text-center">
-            <a href="./static/assets/images/topstoriesterminal.png" target="_blank" title="Click to enlarge"
+            <a href="../static/assets/images/topstoriesterminal.png" target="_blank" title="Click to enlarge"
               class="img-btn">
-              <img src="./static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
+              <img src="../static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
                 alt="Top Stories Terminal">
             </a>
-            <p>Calculator Interface</p>
+            <p>Top Stories Terminal</p>
           </figure>
         </div>
         <div class="col-xs-12">
           <figure class="text-center">
-            <a href="./static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge"
+            <a href="../static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge"
               class="img-btn">
-              <img src="./static/assets/images/topstoriesscript.png" class="img-responsive img-rounded img-centered"
+              <img src="../static/assets/images/topstoriesscript.png" class="img-responsive img-rounded img-centered"
                 alt="Top Stories Script">
             </a>
-            <p>Calculator Script</p>
+            <p>Top Stories Script</p>
           </figure>
         </div>
 
@@ -167,7 +167,7 @@
     });
   </script>
 
-  <script type="text/javascript" src="./static/main.70a66962.js"></script>
+  <script type="text/javascript" src="../static/main.70a66962.js"></script>
 </body>
 
 </html>
