updates to calculator project

--- a/templates/works/calculator.html
+++ b/templates/works/calculator.html
@@ -55,7 +55,6 @@
             <li><a href="../Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
           </ul>
 
-
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./passwordchecker.html" title="Password Checker" class="active">001</a></li>
             <li><a href="./topstories.html" title="Hacker News: Top Stories" class="active">002</a></li>
@@ -79,18 +78,11 @@
             <div class="text-center">
               <h1 class="h2">004 : GUI Calculator</h1>
             </div>
-            <p>Interested in the top news stories? This Python script scrapes the first two pages of Hacker News for the
-              most upvoted articles. In my daily life, this shortcut minimizes wasted time and allows me to jump start
-              my day!
+            <p>Using the Tkinter package for Python, I built a gaphical user interface calculator capable of performing
+              basic math operations.
             </p>
             <a href="https://github.com/ascobee/portfolioprojects" target="_blank" title="GitHub"
               class="btn-download">View/Download</a>
-
-            <!-- <blockquote>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
-              </p>
-              <small class="pull-right">Irina Martin</small>
-            </blockquote> -->
           </div>
         </div>
 
@@ -112,15 +104,15 @@
 
         <div class="col-xs-12">
           <figure class="text-center">
-            <a href="../static/assets/images/topstoriesterminal.png" target="_blank" title="Click to enlarge"
+            <a href="../static/assets/images/calculatorinterface.png" target="_blank" title="Click to enlarge"
               class="img-btn">
-              <img src="../static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
-                alt="Top Stories Terminal">
+              <img src="../static/assets/images/calculatorinterface.png" class="img-responsive img-rounded img-centered"
+                alt="Calculator Interface">
             </a>
             <p>Calculator Interface</p>
           </figure>
         </div>
-        <div class="col-xs-12">
+        <!--         <div class="col-xs-12">
           <figure class="text-center">
             <a href="../static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge"
               class="img-btn">
@@ -129,7 +121,7 @@
             </a>
             <p>Calculator Script</p>
           </figure>
-        </div>
+        </div> -->
 
         <!--         <div class="col-xs-12">
           <figure class="">
