Added Java to list of programming languages

--- a/templates/works/backend-rest-api-with-django.html
+++ b/templates/works/backend-rest-api-with-django.html
@@ -26,7 +26,7 @@
   <link href="../static/favicon.ico" rel="icon">
   <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>002 : Web Scraping</title>
+  <title>005 : Backend REST API</title>
 </head>
 
 <body class="">
@@ -60,10 +60,9 @@
             <li><a href="./topstories.html" title="Hacker News: Top Stories" class="active">002</a></li>
             <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
             <li><a href="./calculator.html" title="GUI Calculator" class="active">004</a></li>
-            <!-- <li><a href="./comingsoon.html" title="">005</a></li> -->
+            <li><a href="./backend-rest-api-with-django.html" title="Backend REST API" class="active">005</a></li>
             <!-- <li><a href="./comingsoon.html" title="">006</a></li> -->
           </ul>
-
         </div>
       </div>
     </nav>
@@ -76,13 +75,14 @@
           <img src="../static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">002 : Top Stories</h1>
+              <h1 class="h2">005 : Backend REST API</h1>
             </div>
-            <p>Looking for interesting computer science news? This Python script scrapes the first two pages of Hacker
-              News for the most upvoted articles. In my daily life, this shortcut minimizes wasted time and allows me to
-              jump start my day!
+            <p>Working in Python, I was able to create a password checker that has become a useful tool for
+              myself and could be to others when trying to avoid being a target in a data breach. This uses the
+              haveibeenpwned.com API to see how many times a particular password has been leaked. Although this is a
+              simple script, it could be useful for any user.
             </p>
-            <a href="https://github.com/ascobee/portfolioprojects" target="_blank" title="GitHub"
+            <a href="https://github.com/ascobee/recipe-app-api" target="_blank" title="GitHub"
               class="btn-download">View/Download</a>
           </div>
         </div>
@@ -90,45 +90,52 @@
         <!--         <div class="col-md-8 col-md-offset-2 section-container-spacer">
           <div class="row">
             <div class="col-xs-12 col-md-6">
-              <a href="./static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge" class="">
-                <img src="./static/assets/images/topstoriesscript.png" class="img-responsive img-rounded"
-                  alt="Top Stories Script">
+              <a href="./static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
+                class="">
+                <img src="./static/assets/images/passwordcheckerscript.png" class="img-responsive img-rounded"
+                  alt="Password Checker Script">
               </a>
-              <p>Top Stories Script</p>
+              <p>Password Checker Script</p>
             </div>
             <div class="col-xs-12 col-md-6">
-              <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
-              <p>Memphis skyline</p>
+              <figure class="">
+                <a href="./static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
+                  class="">
+                  <img src="./static/assets/images/passwordcheckerterminal.png"
+                    class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
+                </a>
+              </figure>
+              <p>Password Checker Terminal</p>
             </div>
           </div>
         </div> -->
 
         <div class="col-xs-12">
           <figure class="text-center">
-            <a href="../static/assets/images/topstoriesterminal.png" target="_blank" title="Click to enlarge"
+            <a href="../static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
               class="img-btn">
-              <img src="../static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
-                alt="Top Stories Terminal">
+              <img src="../static/assets/images/passwordcheckerterminal.png"
+                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
             </a>
-            <p>Top Stories Terminal</p>
+            <p>Password Checker Terminal</p>
           </figure>
         </div>
         <div class="col-xs-12">
           <figure class="text-center">
-            <a href="../static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge"
+            <a href="../static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
               class="img-btn">
-              <img src="../static/assets/images/topstoriesscript.png" class="img-responsive img-rounded img-centered"
-                alt="Top Stories Script">
+              <img src="../static/assets/images/passwordcheckerscript.png"
+                class="img-responsive img-rounded img-centered" alt="Password Checker Script">
             </a>
-            <p>Top Stories Script</p>
+            <p>Password Checker Script</p>
           </figure>
         </div>
 
-        <!--         <div class="col-xs-12">
+        <!-- <div class="col-xs-12">
           <figure class="">
             <a href="https://github.com/ascobee/portfolio" target="_blank" title="Download" class="">
-              <img src="./static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
-                alt="Top Stories Terminal">
+              <img src="./static/assets/images/passwordcheckerterminal.png"
+                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
             </a>
           </figure>
         </div> -->
@@ -161,6 +168,7 @@
   </script>
 
   <script type="text/javascript" src="../static/main.70a66962.js"></script>
+
 </body>
 
 </html>
