--- a/templates/works/passwordchecker.html
+++ b/templates/works/passwordchecker.html
@@ -79,9 +79,9 @@
               <h1 class="h2">001 : Password Checker</h1>
             </div>
             <p>Working in Python, I was able to create a password checker that has become a useful tool for myself and
-              could be to others when trying to avoid being a target in a data breach. This uses the haveibeenpwned.com
-              API to see how many times a particular password has been leaked. Although this is a simple script, it
-              could be useful for any user.
+              could be to others when trying to avoid being a target in a data breach. This uses the Pwned Passwords API
+              to find out how many times a particular password has been leaked. This simple script could be useful for
+              any user.
             </p>
             <a href="https://github.com/ascobee/portfolioprojects" target="_blank" title="GitHub"
               class="btn-download">View/Download</a>
