--- a/templates/about.html
+++ b/templates/about.html
@@ -86,13 +86,14 @@
                           <li>Python</li>
                           <li>HTML</li>
                           <li>CSS</li>
+                          <li>PHP</li>
                         </ul>
                       </div>
                       <div class="col-xs-6">
                         <ul>
+                          <li>Java</li>
                           <li>PostgreSQL</li>
                           <li>JavaScript</li>
-                          <li>PHP</li>
                         </ul>
                       </div>
                     </div>
