--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -37,7 +37,7 @@
   <div id="site-border-bottom"></div>
   <!-- Add your content of header -->
   <header>
-    <nav class="navbar  navbar-fixed-top navbar-default">
+    <nav class="navbar navbar-fixed-top navbar-default">
       <div class="container">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
           aria-expanded="false">
@@ -56,7 +56,6 @@
             <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
           </ul>
 
-
         </div>
       </div>
     </nav>
@@ -71,17 +70,15 @@
           </div>
 
           <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-10 col-md-offset-1 text-center">
               Thank You! I will get in touch with you soon!
             </div>
-
           </div>
 
         </div>
       </div>
     </div>
   </div>
-
 
   <footer class="footer-container text-center">
     <div class="container">
