Minor updates to index and about.

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,8 +72,7 @@
                             <h1>Hello,<br>
                                 <span id="typed-strings">
                                     <span>I'm Austin Scobee</span>
-                                    <span>Self-Taught Developer</span>
-                                    <!-- <span>Python Developer</span> -->
+                                    <span>Self-Taught Software Engineer</span>
                                 </span>
                                 <span id="typed"></span>
                             </h1>
