--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -64,8 +64,7 @@
         <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
           <div class="text-center">
             <h1 class="h2">02 : Works</h1>
-            <p>Here are a few of my favorite projects. I am currently working in Java. More
-              projects coming soon!</p>
+            <p>Here are a few of my favorite projects. More projects coming soon!</p>
           </div>
         </div>
 
